--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,9 @@
 /* app css stylesheet */
 
+body {
+  word-break: break-word;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
